

-----------------------------------------------------------------------
Version 2.8.1  3/15/2008
-----------------------------------------------------------------------

* bug with text saved for searching.  Reedit.

* Added new "dashboard" page. It's a way of displaying the results of
several reports all on one page, customized for you. Go to "reports" 
and click on "dashboard" link and then "edit dashboard" to try it out. 

* Added another query to setup.sql, which helps with finding bugs with
large attachments:

insert into queries (qu_desc, qu_sql, qu_default) values (
'bugs with attachments',
+ char(10) + ' select bp_bug, sum(bp_size) bytes '
+ char(10) + ' into #t '
+ char(10) + ' from bug_posts '
+ char(10) + ' where bp_type = ''file'' '
+ char(10) + ' group by bp_bug '
+ char(10) + ' select ''#ffffff'', bg_id [id], bg_short_desc [desc], '
+ char(10) + ' bytes ' 
+ char(10) + ' from bugs '
+ char(10) + ' inner join #t on bp_bug = bg_id '
+ char(10) + ' WhErE 1 = 1 '
+ char(10) + ' order by bytes desc ' 
+ char(10) + ' drop table #t ',
0)


-----------------------------------------------------------------------
Version 2.8.0  3/8/2008
-----------------------------------------------------------------------
To upgrade to this release, run the sql in upgrade.sql to create a new
table:

create table queued_notifications
(
qn_id int identity primary key not null,
qn_date_created datetime not null,
qn_bug int not null,
qn_user int not null,
qn_status nvarchar(30) not null,
qn_retries int not null,
qn_last_exception nvarchar(1000),
qn_to nvarchar(200) not null,
qn_from nvarchar(200) not null,
qn_subject nvarchar(200) not null,
qn_body ntext not null
)

Fixed bug 1900496 "print bug, emails, history, don't obey fld
permissions".  As part of this bug fix, the Web.config option 
"SendJustOneEmail" is now obsolete.

I've rewritten the logic for sending out the notifications so that it
first stores the email into the new "queued_notifications" table and 