@@ -328,7 +328,7 @@
 		0 = hide
 		-->
 
-		<add key="DefaultPermissionLevel" value="0"/>
+		<add key="DefaultPermissionLevel" value="2"/>
 
 
 		<!--
