@@ -35,6 +35,13 @@ Regarding the way I used syscolumns, well, it's a bad design by me, but because 
 Version 2.8.1  3/15/2008
 -----------------------------------------------------------------------
 
+MAKE SUER I DON"T STRIP TAGS OUT OF GOOD COMMENTS IF fckEditor is NOT being used.
+DEAL WITH THE "XX" stuff
+
+CHECK THE GUY'S CSS STUFF
+
+* LAST LOGIN DATE
+
 * bug with text saved for searching.  Reedit.
 
 * Added new "dashboard" page. It's a way of displaying the results of
